:lipstick: Adding classes and styles

--- a/index.html
+++ b/index.html
@@ -6,30 +6,57 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./static/images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Profile card component</title>
+  <!-- Styles -->
+  <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+  <link rel="stylesheet" href="./static/css/styles.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+
+  <title>Profile card component solution</title>
 </head>
 <body>
-  Victor Crest
-  26
-  London
+  <div class="card">
+    <div class="top">
+      <img src="./static/images/bg-pattern-card.svg" alt="top">
+    </div>
+    <div class="content">
+      <div class="underImage">
+        <div class="title">
+          <h1>Victor Crest</h2>
+          <p>26</p>
+        </div>
+        <p>London</p>
+      </div>
 
-  80K
-  Followers
+      <div class="stats">
+        <ul>
+          <li>
+            <h2>80K</h2>
+            <p>Followers</p>
+          </li>
+        </ul>
 
-  803K
-  Likes
+        <ul>
+          <li>
+            <h2>803K</h2>
+            <p>Likes</p>
+          </li>
+        </ul>
 
-  1.4K
-  Photos
+        <ul>
+          <li>
+            <h2>1.4K</h2>
+            <p>Photos</p>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">the_nutscout</a>.
   </div>
 </body>
 </html>
