:lipstick: Updating and deleting style classes

--- a/index.html
+++ b/index.html
@@ -18,40 +18,32 @@
 </head>
 <body>
   <div class="card">
-    <div class="top">
-      <img src="./static/images/bg-pattern-card.svg" alt="top">
-    </div>
-    <div class="content">
-      <div class="underImage">
-        <div class="title">
-          <h1>Victor Crest</h2>
-          <p>26</p>
-        </div>
-        <p>London</p>
-      </div>
+    <img class="profilePicture" src="./static/images/image-victor.jpg" alt="profile picture">
+    <div class="content">      
+      <ul class="title">
+        <li><h1>Victor Crest</h2></li>
+        <li><p>26</p></li>
+      </ul>
+      <p class="state">London</p>
 
-      <div class="stats">
-        <ul>
-          <li>
-            <h2>80K</h2>
-            <p>Followers</p>
-          </li>
-        </ul>
+      <hr>
 
-        <ul>
-          <li>
-            <h2>803K</h2>
-            <p>Likes</p>
-          </li>
-        </ul>
+      <ul class="stats">
+        <li>
+          <h2>80K</h2>
+          <p>Followers</p>
+        </li>
 
-        <ul>
-          <li>
-            <h2>1.4K</h2>
-            <p>Photos</p>
-          </li>
-        </ul>
-      </div>
+        <li>
+          <h2>803K</h2>
+          <p>Likes</p>
+        </li>
+
+        <li>
+          <h2>1.4K</h2>
+          <p>Photos</p>
+        </li>
+      </ul>
     </div>
   </div>
   <div class="attribution">
