:art: Moving attachments to footer

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
       </ul>
     </div>
   </div>
-  <div class="attribution">
+  <footer>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">the_nutscout</a>.
-  </div>
+    Coded by <a href="https://www.frontendmentor.io/profile/thenutscout">the_nutscout</a>.
+  </footer>
 </body>
 </html>
