:hammer: Adding title statement

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
 
-  <title>Profile card component solution</title>
+  <title>Profile card component solution using Flexbox centering</title>
 </head>
 <body>
   <div class="card">
